# diem

./: .gitignore  PRIVACY.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: launch.json
scripts/: build.ps1  dev.ps1  load-build-env.ps1
src/: App.tsx
src-tauri/: Cargo.toml  diem.config.example.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql
src-tauri/resources/: seed.json
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  models.rs  state.rs
src-tauri/src/ai_summary/: mod.rs
src-tauri/src/db/: encryption.rs  mod.rs  repo.rs
src-tauri/src/tracker/: foreground.rs  idle.rs  mod.rs
src/components/: AppsList.tsx  CategoryDonut.tsx  Logo.tsx  MeetingList.tsx  PeriodBars.tsx  SummaryPanel.tsx  Timeline.tsx  TopBar.tsx  ui.tsx
src/lib/: api.ts  cn.ts  format.ts  hooks.ts  mock.ts  types.ts
src/state/: store.ts
src/styles/: index.css
src/views/: Period.tsx  Settings.tsx  Today.tsx
